history&modern sections

--- a/Manga.html
+++ b/Manga.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All about Manga</title>
+    <!--style of navigation bar elements-->
     <style>
 nav {
     background-color: #4d347c;
@@ -38,30 +39,47 @@ display: table;
     </style>
 </head>
 <body style="background-color: #e7dbff; margin= 0px;">
+    <!--navigation bar links-->
     <nav>
         <div class="nav-item" style="text-decoration: none";><a href="Manga.html" class="nav-item" >Home</a></div>
         <div class="nav-item"><a href="Details.html"class="nav-item" style="margin: 0%;" >Recomendations</a></div> 
         <div class="nav-item"><a href="More.html"class="nav-item">Anime</a></div>
     </nav>
-    <picture>
-        <img width="100%" height="120%" src="photos/MANGA (1).png">
-    </picture>
-
+    <!--background image on the top of the page-->
+    <figure>
+        <picture>
+            <img width="100%" height="120%" src="photos/MANGA (1).png">
+        </picture>
+    </figure>
+    <!--section about intro info-->
     <section style="background-color: #4d347c;">
         <br/>
-        <h1 style="font-size:xx-large; color: #ffffff; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; padding top: 50px; margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">WHAT IS MANGA?</h1>
+        <h1 style="font-size:xx-large; color: #ffffff; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; 
+        margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">WHAT IS MANGA?</h1>
         <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+    <!--section about history-->
+    <section style="background-color: #e7dbff;">
+        <br/>
+        <br/>
+        <table>
+            <tr>
+                <h1 style="font-size:xx-large; color: #252525;  font-family: 'Tahoma'; size: 10px;text-align: left; margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">HISTORY</h1>
+                <td style="vertical-align: top;"> <p style="color:#4d347c; font-family: 'Tahoma'; padding: 15px 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><h1 style="font-size:xx-large; color: #252525;  font-family: 'Tahoma'; size: 10px;text-align: right; margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">PRESENT</h1>
+                <!--section about modern times-->
+                <p style="color:#4d347c; font-family: 'Tahoma'; padding: 15px 20px;text-align: right;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>  
+                <!--additional picture-->
+                <th><img width="350" height="300" alt="photo of Osamu Tezuka" src="photos/Osamu_Tezuka_1951_Scan10008-2.jpg"></th>
+            </tr> 
+        </table>
+    
     </section>
     <section style="background-color: #e7dbff;">
         <br/>
-        <h1 style="font-size:xx-large; color: #252525; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: left; padding top: 50px; margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">History</h1>
         <table>
-            <tr>
-            <th> <p style="color:#4d347c; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></th> 
-            <td><img src="photos/Manga history.jpeg"></td>
-        </tr> 
-    </table>
+           
+        </table>
     </section>
-<!--hi-->
+
 </body>
 </html>
