--- a/Manga.html
+++ b/Manga.html
@@ -1,3 +1,12 @@
+<!--Name:Sofiia Gontar
+
+Course: Web Development 10S
+
+Teacher: Ms. Hoitink
+
+School: Pembina Trails Collegiate (PTC)
+
+Date Last Modified:-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,6 +67,10 @@ display: table;
         margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">WHAT IS MANGA?</h1>
         <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
+    <section style="background-color: #7667ce;">
+    <!--video that gives additional explanation-->
+        <iframe style="margin-right:auto; margin-left: auto; display: block;" width="600" height="350" src="https://www.youtube.com/embed/4sEvC4yJay4?si=t6p1gKj7IiYFNEtr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
     <!--section about history-->
     <section style="background-color: #e7dbff;">
         <br/>
@@ -69,16 +82,26 @@ display: table;
                 <!--section about modern times-->
                 <p style="color:#4d347c; font-family: 'Tahoma'; padding: 15px 20px;text-align: right;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>  
                 <!--additional picture-->
-                <th><img width="350" height="300" alt="photo of Osamu Tezuka" src="photos/Osamu_Tezuka_1951_Scan10008-2.jpg"></th>
+                <th><img title="photo of Osasmu Tezuka" width="350" height="300" alt="photo of Osamu Tezuka" src="photos/Osamu_Tezuka_1951_Scan10008-2.jpg"></th>
             </tr> 
         </table>
-    
     </section>
-    <section style="background-color: #e7dbff;">
+    <!--section to find out more about manga-->
+    </section>
+    <section style="background-color: #4d347c; margin-top: 20px;">
         <br/>
-        <table>
-           
-        </table>
+        <h1 style=" font-size:xx-large; color: #ffffff; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;"><u>EXPLORE</u></h1>
+        <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+        <br/>
+        <table></table>
+        <!--one piece-->
+        <a href=""><img src=""></a>
+        <!--fruit basket-->
+        <a href=""><img src=""></a>
+        <!--demon slayer-->
+        <a href=""><img src=""></a>
+    </table>
     </section>
 
 </body>
