--- a/Manga.html
+++ b/Manga.html
@@ -47,7 +47,7 @@ display: table;
 }
     </style>
 </head>
-<body style="background-color: #e7dbff; margin= 0px;">
+<body style="background-color: #e7dbff; margin:0px;">
     <!--navigation bar links-->
     <nav>
         <div class="nav-item" style="text-decoration: none";><a href="Manga.html" class="nav-item" >Home</a></div>
