--- a/Discover.html
+++ b/Discover.html
@@ -48,7 +48,7 @@ display: table;
     <!--background image on the top of the page-->
     <figure style="margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;">
         <picture>
-            <img width="100%" height="120%" src="photos/MANGA (1).png">
+            <img width="100%" height="120%" src="photos/discover.png">
         </picture>
     </figure>
     <!--section about into to recomendations-->
@@ -57,14 +57,38 @@ display: table;
         <h1 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #ffffff; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">DISCOVER</h1>
         <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <br/>
+        <table style="color: #e7dbff;font-family: Verdana, Geneva, Tahoma, sans-serif;margin: auto;margin-left: 35%;margin-right: auto;">
+            <tr>
+                <th style="background-color: #4d347c; color: #7667ce;" >author<sub>s</sub></th>
+                <th style="background-color: #4d347c; color: #7667ce;" >title</th>
+                <th style="background-color: #4d347c; color:  #7667ce;" >year</th>
+            </tr>
+            <tr>
+                <th>원곡 - Stella Jang</th>
+                <th>Villain Utattemita </th>
+                <th>Ado</th>
+            </tr>
+            <tr>
+                <th>なとり - Natori</th>
+                <th>OVERDOSE</th>
+                <th>Ado</th>
+            </tr>
+            <tr>
+                <th>원곡 - LE SSERAFIM</th>
+                <th>Blue Flame cover  </th>
+                <th>Ado</th>
+            </tr>
+        </table>
+        <br>
+        <br>
     </section>
         <!--section action manga links-->
         <section style="background-color: #e7dbff;margin-top: -8px;">
             <h2 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #4d347c; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">ACTION</h2>
             <table  style="margin: 0px auto;">
-                <td><a href="https://myanimelist.net/manga/2/Berserk" target="_blank"><img src="photos/2.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="sailor moon"></a></td>
-                <td><a href="https://myanimelist.net/manga/23390/Shingeki_no_Kyojin" target="_blank"><img src="photos/2.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="one piece"></a></td>
-                <td><a href="https://myanimelist.net/manga/13/One_Piece"target="_blank"><img src="photos/2.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="demon slayer"></a></td>
+                <td><a href="https://myanimelist.net/manga/2/Berserk" target="_blank"><img src="photos/6.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Berserk"></a></td>
+                <td><a href="https://myanimelist.net/manga/23390/Shingeki_no_Kyojin" target="_blank"><img src="photos/8.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="attack on titan"></a></td>
+                <td><a href="https://myanimelist.net/manga/13/One_Piece"target="_blank"><img src="photos/2.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="one piece"></a></td>
             </table>
         <br/>
         </section>
@@ -72,29 +96,80 @@ display: table;
         <section style="background-color: #4d347c;margin-top: -8px;">
             <h2 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #e7dbff; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">COMEDY</h2>
             <table  style="margin: 0px auto;">
-                <td><a href="https://myanimelist.net/manga/44347/One_Punch-Man" target="_blank"><img src="photos/2.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="sailor moon"></a></td>
-                <td><a href="https://myanimelist.net/manga/30/Ouran_Koukou_Host_Club" target="_blank"><img src="photos/2.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="one piece"></a></td>
-                <td><a href="https://myanimelist.net/manga/37755/Saiki_Kusuo_no_%CE%A8-nan"target="_blank"><img src="photos/2.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="demon slayer"></a></td>
+                <td><a href="https://myanimelist.net/manga/99007/Komi-san_wa_Comyushou_desu?q=komi%20&cat=manga" target="_blank"><img src="photos/11.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Komi can't communicate"></a></td>
+                <td><a href="https://myanimelist.net/manga/30/Ouran_Koukou_Host_Club" target="_blank"><img src="photos/12.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Ouran Koukou Host Club"></a></td>
+                <td><a href="https://myanimelist.net/manga/37755/Saiki_Kusuo_no_%CE%A8-nan"target="_blank"><img src="photos/22.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Saiki Kusuo"></a></td>
             </table>
         <br/>
         </section>
-        <!--section comedy manga links-->
-        <section style="background-color: #e7dbff;margin-top: -8px;">
+        <!--section romance manga links-->
+        <section id="romance manga" style="background-color: #e7dbff;margin-top: -8px;">
             <h2 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #4d347c; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">ROMANCE</h2>
             <table  style="margin: 0px auto;">
-                <td><a href="https://myanimelist.net/manga/42451/Horimiya" target="_blank"><img src="photos/2.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="sailor moon"></a></td>
-                <td><a href="https://myanimelist.net/manga/102/Fruits_Basket" target="_blank"><img src="photos/2.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="one piece"></a></td>
-                <td><a href="https://myanimelist.net/manga/92/Bishoujo_Senshi_Sailor_Moon"target="_blank"><img src="photos/2.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="demon slayer"></a></td>
+                <td><a href="https://myanimelist.net/manga/42451/Horimiya" target="_blank"><img src="photos/16.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Horimiya"></a></td>
+                <td><a href="https://myanimelist.net/manga/102/Fruits_Basket" target="_blank"><img src="photos/9.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="FruitsBasket"></a></td>
+                <td><a href="https://myanimelist.net/manga/92/Bishoujo_Senshi_Sailor_Moon"target="_blank"><img src="photos/1.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="sailor moon"></a></td>
             </table>
         <br/>
         </section>
-        <!--section comedy manga links-->
-        <section style="background-color: #e7dbff;margin-top: -8px;">
-            <h2 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #4d347c; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">FANTASY</h2>
+        <!--section fantasy manga links-->
+        <section style="background-color: #4d347c;margin-top: -8px;">
+            <h2 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #e7dbff; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">FANTASY</h2>
             <table  style="margin: 0px auto;">
-                <td><a href="https://myanimelist.net/anime/6702/Fairy_Tail" target="_blank"><img src="photos/2.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="sailor moon"></a></td>
-                <td><a href="https://myanimelist.net/anime/11061/Hunter_x_Hunter_2011" target="_blank"><img src="photos/2.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="one piece"></a></td>
-                <td><a href="https://myanimelist.net/anime/20/Naruto"target="_blank"><img src="photos/2.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="demon slayer"></a></td>
+                <td><a href="https://myanimelist.net/anime/6702/Fairy_Tail" target="_blank"><img src="photos/7.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Fairy Tail"></a></td>
+                <td><a href="https://myanimelist.net/manga/11/Naruto" target="_blank"><img src="photos/15.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="naruto"></a></td>
+                <td><a href="https://myanimelist.net/manga/96792/Kimetsu_no_Yaiba"target="_blank"><img src="photos/3.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="demon slayer"></a></td>
             </table>
         <br/>
         </section>
+        <!--section slice of life manga links-->
+        <section style="background-color: #e7dbff;margin-top: -8px;">
+            <h2 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #4d347c; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">SLICE OF LIFE</h2>
+            <table  style="margin: 0px auto;">
+                <td><a href="https://myanimelist.net/manga/4632/Oyasumi_Punpun" target="_blank"><img src="photos/17.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Oyasumi Punpun"></a></td>
+                <td><a href="https://myanimelist.net/manga/41629/Hyouka" target="_blank"><img src="photos/18.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Hyouka"></a></td>
+                <td><a href="https://myanimelist.net/manga/3378/Kimi_ni_Todoke"target="_blank"><img src="photos/19.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Kimi ni Todoke"></a></td>
+            </table>
+        <br/>
+        </section>
+        <!--section mystery & thrill manga links-->
+        <section style="background-color: #4d347c;margin-top: -8px;">
+            <h2 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #e7dbff; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">MYSTERY & THRILL</h2>
+            <table  style="margin: 0px auto;">
+                <td><a href="https://myanimelist.net/manga/21/Death_Note" target="_blank"><img src="photos/13.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Death Note"></a></td>
+                <td><a href="https://myanimelist.net/manga/56529/Bungou_Stray_Dogs" target="_blank"><img src="photos/20.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Bungou Stray Dogs"></a></td>
+                <td><a href="https://myanimelist.net/manga/1706/JoJo_no_Kimyou_na_Bouken_Part_7__Steel_Ball_Run"target="_blank"><img src="photos/5.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="JoJo's bizare adventures"></a></td>
+            </table>
+        <br/>
+        </section>
+        <!--section sports manga links-->
+        <section style="background-color: #e7dbff;margin-top: -8px;">
+            <h2 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #4d347c; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">SPORT</h2>
+            <table  style="margin: 0px auto;">
+                <td><a href="https://myanimelist.net/manga/35243/Haikyuu" target="_blank"><img src="photos/14.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Haikyuu"></a></td>
+                <td><a href="https://myanimelist.net/manga/114745/Blue_Lock" target="_blank"><img src="photos/10.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Blue Lock"></a></td>
+                <td><a href="https://myanimelist.net/manga/51/Slam_Dunk"target="_blank"><img src="photos/21.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="Slam Dunk"></a></td>
+            </table>
+        <br/>
+        </section>
+        <br/>
+        <br/>
+        <footer style="background-color: #7667ce;color:#e7dbff; font-family: 'Tahoma';">
+                    <section style="font-family: 'Tahoma'; margin: auto;margin-left: 45%;margin-right: auto;">
+                        <br/>
+                        
+                            <h3 style="background-color: #7667ce;color:#e7dbff; font-family: 'Tahoma'">LEARN MORE</h3>
+                            <ul style="margin: auto;margin-left: -8%;margin-right: auto;">
+                            <li><a href="https://mail.google.com/mail/u/0/#inbox">CONTACT US</a></li>
+                            <li><a href="https://myanimelist.net/">SOURCES</a></li>
+                            <li><a href="https://www.fandom.com/topics/anime">SHARE YOUR THOUGHTS</a></li>
+                            </ul>
+                            <br/>
+                            <small style="background-color: #7667ce;color:#e7dbff; margin: auto;margin-left: -8%;margin-right: auto;">
+                                Copyright © 2025 ALL ABOUT MANGA PAGE. All Rights Reserved.
+                            </small>
+                        </footer>
+                    </section>
+        </footer>
+    </body>
+    </html>
