--- a/Manga.html
+++ b/Manga.html
@@ -92,9 +92,9 @@ display: table;
             <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
         <br/>
         <table  style="margin: 0px auto;">
-            <td><a href="Details.html"><img src="photos/1.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="sailor moon"></a></td>
-            <td><a href="Details.html"><img src="photos/2.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="one piece"></a></td>
-            <td><a href="Details.html"><img src="photos/3.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="demon slayer"></a></td>
+            <td><a href="Discover.html/id="><img src="photos/1.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="sailor moon"></a></td>
+            <td><a href="Discover.html"><img src="photos/2.png" style="margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="one piece"></a></td>
+            <td><a href="Discover.html"><img src="photos/3.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="demon slayer"></a></td>
         </table>
     </section> 
     <!--forms about users intrests-->
@@ -199,18 +199,18 @@ display: table;
     </form>
     <br/>
     <br/>
-    <footer style="background-color: #4d347c;color:#e7dbff; font-family: 'Tahoma';">
+    <footer style="background-color: #7667ce;color:#e7dbff; font-family: 'Tahoma';">
                 <section style="font-family: 'Tahoma'; margin: auto;margin-left: 45%;margin-right: auto;">
                     <br/>
                     
-                        <h3 style="background-color: #4d347c;color:#e7dbff; font-family: 'Tahoma'">LEARN MORE</h3>
+                        <h3 style="background-color: #7667ce;color:#e7dbff; font-family: 'Tahoma'">LEARN MORE</h3>
                         <ul style="margin: auto;margin-left: -8%;margin-right: auto;">
-                        <li>CONTACT US</li>
-                        <li>SOURCES</li>
-                        <li>SHARE YOUR THOUGHTS WITH US</li>
+                        <li><a href="https://mail.google.com/mail/u/0/#inbox">CONTACT US</a></li>
+                        <li><a href="https://myanimelist.net/">SOURCES</a></li>
+                        <li><a href="https://www.fandom.com/topics/anime">SHARE YOUR THOUGHTS</a></li>
                         </ul>
                         <br/>
-                        <small style="background-color: #4d347c;color:#e7dbff; margin: auto;margin-left: -8%;margin-right: auto;">
+                        <small style="background-color: #7667ce;color:#e7dbff; margin: auto;margin-left: -8%;margin-right: auto;">
                             Copyright © 2025 ALL ABOUT MANGA PAGE. All Rights Reserved.
                         </small>
                     </footer>
