--- a/Discover.html
+++ b/Discover.html
@@ -55,28 +55,28 @@ display: table;
     <section style="background-color: #7667ce;margin-top: -8px;">
         <!--<br/>-->
         <h1 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #ffffff; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">DISCOVER</h1>
-        <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Step into the vast and diverse world of manga, where every page holds new surprises, from heart-pounding action to touching moments of friendship and magic. With endless genres waiting to be discovered, you’ll find everything from fantasy adventures to slice-of-life tales that captivate your imagination. The possibilities are endless, so why not explore something new today? Here are the top 3 most-sold mangas and more:</p>
         <br/>
-        <table style="color: #e7dbff;font-family: Verdana, Geneva, Tahoma, sans-serif;margin: auto;margin-left: 35%;margin-right: auto;">
+        <table style="color: #e7dbff;font-family: Tahoma, sans-serif;margin: auto;margin-left: 35%;margin-right: auto;">
             <tr>
-                <th style="background-color: #4d347c; color: #7667ce;" >author<sub>s</sub></th>
-                <th style="background-color: #4d347c; color: #7667ce;" >title</th>
-                <th style="background-color: #4d347c; color:  #7667ce;" >year</th>
+                <th style="background-color: #4d347c; color: #7667ce;" ><b>author<sub>s</sub></b></th>
+                <th style="background-color: #4d347c; color: #7667ce;" ><b>title</b></th>
+                <th style="background-color: #4d347c; color:  #7667ce;" ><b>year</b></th>
             </tr>
             <tr>
-                <th>원곡 - Stella Jang</th>
-                <th>Villain Utattemita </th>
-                <th>Ado</th>
+                <td><i>Eiichiro Oda</i></td>
+                <td><u>One Piece</u></td>
+                <td>1997-present</td>
             </tr>
             <tr>
-                <th>なとり - Natori</th>
-                <th>OVERDOSE</th>
-                <th>Ado</th>
+                <td><i>	Fujiko F. Fujio</i></td>
+                <td><u>Doraemon</u></td>
+                <td>1969-1996</td>
             </tr>
             <tr>
-                <th>원곡 - LE SSERAFIM</th>
-                <th>Blue Flame cover  </th>
-                <th>Ado</th>
+                <td><i>Takao Saito, Saito Production</i></td>
+                <td><u>Golgo 13</u></td>
+                <td>1968-present</td>
             </tr>
         </table>
         <br>
@@ -166,7 +166,7 @@ display: table;
                             </ul>
                             <br/>
                             <small style="background-color: #7667ce;color:#e7dbff; margin: auto;margin-left: -8%;margin-right: auto;">
-                                Copyright © 2025 ALL ABOUT MANGA PAGE. All Rights Reserved.
+                                Copyright &copy; 2025 ALL ABOUT MANGA PAGE. All Rights Reserved.
                             </small>
                         </footer>
                     </section>
