--- a/Manga.html
+++ b/Manga.html
@@ -64,7 +64,7 @@ display: table;
     <section style="background-color: #4d347c;margin-top: -8px;">
         <!--<br/>-->
         <h1 style=" margin-top: 0px; padding-top: 20px; font-size:xx-large; color: #ffffff; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">WHAT IS MANGA?</h1>
-        <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Manga is an exciting world of Japanese comics that blends stunning artwork with captivating stories, covering everything from epic adventures to heartwarming romances. Unlike traditional comics, manga is read from right to left, adding a unique charm to its immersive storytelling experience. With its growing global influence, manga has inspired not just anime, but movies, games, and an entire fan culture that continues to expand.</p>
         <br/>
         <iframe style="margin-right:auto; margin-left: auto; display: block;" width="600" height="350" src="https://www.youtube.com/embed/4sEvC4yJay4?si=t6p1gKj7IiYFNEtr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <br/>
@@ -76,9 +76,9 @@ display: table;
         <table>
             <tr>
                 <h1 style="font-size:xx-large; color: #252525;  font-family: 'Tahoma'; size: 10px;text-align: left; margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">HISTORY</h1>
-                <td style="vertical-align: top;"> <p style="color:#4d347c; font-family: 'Tahoma'; padding: 15px 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><h1 style="font-size:xx-large; color: #252525;  font-family: 'Tahoma'; size: 10px;text-align: right; margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">PRESENT</h1>
+                <td style="vertical-align: top;"> <p style="color:#4d347c; font-family: 'Tahoma'; padding: 15px 20px;">Manga's history dates back to ancient Japanese picture books, but it truly evolved in the 20th century, becoming a cultural phenomenon. A key figure in this transformation was Osamu Tezuka, often called the "God of Manga," who revolutionized the industry with his innovative storytelling and art style, especially in his iconic work Astro Boy. Tezuka's contributions laid the foundation for modern manga, inspiring generations of creators and shaping the way stories are told through comics today.</p><h1 style="font-size:xx-large; color: #252525;  font-family: 'Tahoma'; size: 10px;text-align: right; margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;">PRESENT</h1>
                 <!--section about modern times-->
-                <p style="color:#4d347c; font-family: 'Tahoma'; padding: 15px 20px;text-align: right;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>  
+                <p style="color:#4d347c; font-family: 'Tahoma'; padding: 15px 20px;text-align: right;">Today, manga continues to thrive, with global hits like One Piece, Naruto, and Bleach—the "Big 3"—captivating millions of fans worldwide, while iconic studios like Studio Ghibli inspire new generations with their timeless, beautifully crafted works that blend art and storytelling. The rise of digital platforms has made manga more accessible than ever, allowing fresh voices and experimental genres to emerge in exciting ways. With an ever-expanding global fanbase, manga has become a cultural powerhouse that’s influencing entertainment around the world. As the future unfolds, manga’s influence is set to grow even further, potentially blending with virtual reality and interactive experiences to create immersive worlds beyond the page.</p></td>  
                 <!--additional picture-->
                 <th><img title="Osamu Tezuka" width="350" height="300" alt="photo of Osamu Tezuka" src="photos/Osamu_Tezuka_1951_Scan10008-2.jpg"></th>
             </tr> 
@@ -89,7 +89,7 @@ display: table;
             <section style="background-color: #7667ce; margin-top: 20px;"> 
             <br/> 
             <h1 style=" font-size:xx-large; color: #ffffff; font-family:Verdana, Geneva, Tahoma, sans-serif;text-align: center; margin-top: 20px; margin-right: 20px;margin-bottom: 20px;margin-left: 20px; ;"><u>EXPLORE</u></h1> 
-            <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+            <p style="color:#e7dbff; font-family: 'Tahoma'; padding: 15px 20px; size: 10px;text-align: center">Dive into the vibrant world of manga, where epic adventures like One Piece and Demon Slayer transport you to unforgettable realms filled with fierce battles, deep friendships, and powerful emotions. Whether you’re uncovering the magical universe of Sailor Moon or embarking on a thrilling journey with pirates and demons, manga offers endless stories to explore and enjoy.</p> 
         <br/>
         <table  style="margin: 0px auto;">
             <td><a href="Discover.html/id="><img src="photos/1.png" style=" margin: auto; padding-left: 25px; padding-top: 10%;padding-right: 25px;padding-bottom: 10%;" width="250" height="400" alt="sailor moon"></a></td>
@@ -211,7 +211,7 @@ display: table;
                         </ul>
                         <br/>
                         <small style="background-color: #7667ce;color:#e7dbff; margin: auto;margin-left: -8%;margin-right: auto;">
-                            Copyright © 2025 ALL ABOUT MANGA PAGE. All Rights Reserved.
+                            Copyright &copy; 2025 ALL ABOUT MANGA PAGE. All Rights Reserved.
                         </small>
                     </footer>
                 </section>
