Update and rename Manga.html to index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ display: table;
 <body style="background-color: #e7dbff; margin-top: 0px;margin-right: 0px;margin-bottom: 0px;margin-left: 0px;">
     <!--navigation bar links-->
     <nav>
-        <div class="nav-item" style="text-decoration: none; padding-top: 0px;padding-bottom: 0px;";><a href="Manga.html"style="padding-top: 28px;padding-bottom: 28px;" class="nav-item" >Home</a></div>
+        <div class="nav-item" style="text-decoration: none; padding-top: 0px;padding-bottom: 0px;";><a href="index.html"style="padding-top: 28px;padding-bottom: 28px;" class="nav-item" >Home</a></div>
         <div class="nav-item"style="padding-top: 0px;padding-bottom: 0px;"><a href="Discover.html"class="nav-item" style="padding-top: 28px;padding-bottom: 28px;" >Discover</a></div> 
         <div class="nav-item"style="padding-top: 0px;padding-bottom: 0px;"><a style="padding-top: 28px;padding-bottom: 28px;"href="Anime.html"class="nav-item">Anime</a></div>
     </nav>
